--- a/15-Mapty-TS/index.html
+++ b/15-Mapty-TS/index.html
@@ -20,6 +20,8 @@
     <img src="src/logo.png" alt="Logo" class="logo" />
 
     <ul class="workouts">
+      <div class="geo-warning hidden">⛔️ Allow this website to access your location, so you can add new workout!
+      </div>
       <form class="form hidden">
         <div class="form__row">
           <label class="form__label">Type</label>
