--- a/18-forkify/index.html
+++ b/18-forkify/index.html
@@ -80,6 +80,8 @@
 
     <div class="search-results">
       <ul class="results">
+        <a href="#664c8f193e7aa067e94e8706">Test 1</a>
+        <a href="#664c8f193e7aa067e94e8438">Test 2</a>
         <!-- 
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
