--- a/18-forkify/index.html
+++ b/18-forkify/index.html
@@ -283,6 +283,8 @@
         <input type="text" name="ingredient-6" placeholder="Format: 'Quantity,Unit,Description'" />
       </div>
 
+      <div class="error"></div>
+
       <button class="btn upload__btn">
         <svg>
           <use href="src/img/icons.svg#icon-upload-cloud"></use>
